# patchix

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix
nix/: module.nix  package.nix  shell.nix
src/: main.rs  merge.rs
src/formats/: ini.rs  json.rs  mod.rs  reg.rs  toml.rs  yaml.rs
tests/: integration.rs
