[package]
name = "patchix"
version = "0.1.0"
edition = "2021"
description = "Declarative config file patcher for Nix — merge patches into mutable application configs"
license = "AGPL-3.0-or-later"
repository = "https://github.com/y0usaf/patchix"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
serde_yml = "=0.0.12"
rust-ini = "0.21"
anyhow = "1"
tempfile = "3"

[dev-dependencies]
serde_yml = "=0.0.12"
